Add endpoints for trx and trx_line
